--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -1,22 +1,34 @@
-.header{
-    background-color: black;
-    color: white;
-    width: 300px;
-}
-.table th{
-    width: 300px;
+.table {
+  margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
 
-}
-.table td{
-    width: 300px;
+  background-color: white;
+  text-align: center;
 
+  box-shadow: var(--shadow-small);
 }
-.tableRow:nth-child(even) {
-  background-color: #cfc6c6; 
+
+.thead {
+  color: white;
+  background-color: black;
+  text-transform: uppercase;
+}
+
+.td {
+  padding: 10px;
+  border: 1px solid grey;
   color: black;
 }
 
-.tableRow:nth-child(odd) {
-  background-color: #c70f0f; 
-  color: black;
+.th {
+  padding: 10px;
+  border: 1px solid grey;
+  color: white;
+}
+
+.tr {
+  &:nth-of-type(odd) {
+    background-color: gray;
+  }
 }
